<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_add_task">Clique para criar uma tarefa</string>
    <string name="hi">Olá</string>
    <string name="have_a_good_day">Tenha um dia produtivo!</string>
    <string name="your_tasks">Suas tarefas:</string>
    <string name="new_task">Nova tarefa</string>
    <string name="create_new_task">Criar uma nova tarefa</string>
    <string name="whats_your_next_task">Qual é a sua próxima atividade?</string>
    <string name="info_notes">Informações adicionais...</string>
    <string name="add">Adicionar</string>
</resources>