<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pedroid.home.fragment.HomeScreenFragment">

    <com.pedroid.designsystem.component.CustomTextView
        android:id="@+id/hi_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/hi"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textType="title2" />

    <com.pedroid.designsystem.component.CustomTextView
        android:id="@+id/subtitle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_a_good_day"
        app:layout_constraintStart_toStartOf="@id/hi_txt"
        app:layout_constraintTop_toBottomOf="@id/hi_txt"
        app:textPriority="tertiary"
        app:textType="subtitle1" />

    <com.pedroid.designsystem.component.CustomTextView
        android:id="@+id/your_tasks_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_tasks"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/subtitle_txt"
        app:layout_constraintTop_toBottomOf="@id/subtitle_txt"
        app:textType="title1" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_tasks_txt" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/new_task"
        app:icon="@drawable/add_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
