<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    tools:context="com.pedroid.home.fragment.AddTaskDialogFragment">

    <com.pedroid.designsystem.component.CustomTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/create_new_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:textPriority="primary"
        app:textType="title2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_title_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin"
        android:layout_marginTop="15dp"
        android:hint="@string/whats_your_next_task"
        app:layout_constraintStart_toStartOf="@id/title"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_title_edt"
            style="@style/edit_text_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_description_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/layout_margin"
        android:hint="@string/info_notes"
        app:layout_constraintStart_toStartOf="@id/task_title_til"
        app:layout_constraintTop_toBottomOf="@id/task_title_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_description_edt"
            style="@style/edit_text_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description_til" />

</androidx.constraintlayout.widget.ConstraintLayout>